<resources>
    <string name="app_name">Parliamentary Elections</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="regform">Registration Form</string>
    <string name="email">E-Mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="id">Unique 10-digit ID</string>
    <string name="voter">Voter</string>
    <string name="Official">Official</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="mob">Mobile Number</string>
    <string name="next">Next</string>
    <string name="confpass">Confirm Password</string>
    <string name="address">Address</string>
    <string name="add_election">+ Add new election details</string>
    <string name="place">Place</string>
    <string name="datetime">Date and Time</string>
    <string name="vote">Votes</string>
    <string name="elections">Elections</string>
    <string name="voters">Voters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
